# gtk-cursor-navigator

./: .gitignore  Cargo.toml  README.md  config.toml
src/: cli.rs  conf.rs  lib.rs  main.rs  main.rs_1  main.rs_3  main.rs_4  main.rs_5  main.rs_New
