[package]
name = "gtk-cursor-navigator"
version = "0.1.0"
edition = "2024"

[dependencies]
# gio = "0.20.11"
gtk4 = "0.9.6"               # Adjust to the latest version if needed.
gdk4-sys = "0.9.6"
gtk4-layer-shell = "0.5"     # Adjust as necessary.
clap = { version = "4.1", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
env_logger = "0.10"
log = "0.4"
glib = "0.20.10"
